Prevent sidebar iframe from being too wide

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -15,6 +15,8 @@
   aside
     float: right
     width: $aside
+    iframe
+      width: 100%
   section
     +rhythm(0,1,1,0)
     h2:after
